# pelicantpc

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pelicanconf.py  publishconf.py  pyproject.toml  wig-notes.md
.github/: dependabot.yml
.github/workflows/: ci.yml  pelican.yml
content/extra/: CNAME
content/pages/: abi.md  about.md  music.md
content/portfolio/: broker-information-site.md  community-trust-bank-site.md  convenientmd.md  denimrack-website-overhaul.md  frontline-god-america.md  great-north-website-and-secured-areas.md  ground-energy.md  hbx-harvard-business-school.md  heat-oracle.md  imagexpert-website-and-revisions.md  kill-screen-magazine.md  lockheed-martin-healthplan-website.md  logicacmg-merger-website.md  marketconnector-business-community.md  my-party-label-order-form.md  piscataqua-savings-bank-website.md  progressive-api-conversion.md  quincy-pond-printworks.md  rivermill-dover-landing.md  salmon-falls-nursery-portfolio.md  since-youve-been-gone.md  social-media-site-boat-crews.md  tabblo-user-interface-review.md  w3c-print-css-testing.md  website-and-bullhorn-api-integration.md  yahoo-buzz-evaluation.md
content/posts/: 2007-12-07-me-and-net.md  2007-12-07-try-catch-drop.md  2007-12-08-rails-20-released.md  2007-12-13-still-waiting.md  2008-01-18-on-sordidness.md  (+211 more)
docs/: RESEARCH_THEME_SWITCHING.md
plugins/: callouts.py  css_compiler.py  oembed.py  opengraph.py  ornaments.py
tests/: test_callouts.py  test_css_compiler.py  test_filters.py  test_microformats.py  test_opengraph.py  test_ornaments.py
themes/: wig-notes.md
(+37 files in other folders)
