[project]
name = "pelicantpc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mysql-connector-python>=9.3.0",
    "pelican-deadlinks",
    "pelican-obsidian-callouts",
    "pelican-oembed",
    "pelican-simple-footnotes>=1.0.3",
    "pelican[markdown]>=4.11.0",
    "pre-commit>=4.5.0",
    "ruff>=0.14.8",
    "typogrify>=2.1.0",
]

[tool.uv.sources]
pelican-deadlinks = { git = "https://github.com/pelican-plugins/deadlinks.git" }
pelican-oembed = { git = "https://github.com/tclancy/pelican-oembed.git" }


[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
